--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.0",
     "next": "13.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@types/node": "^20.4.0",
